test/asm/undefined-opt.err
error: undefined-opt.asm(1):
    Unknown option 'x'
Assembly aborted with 1 error!
